@startuml


class Main
class Car
class Driver



Car : - String make
Car : - String model
Car : - int year
Car : - String bodyStyle
Car : - String driver

Driver : - String name
Driver : - int age

Main : + static void main()

Car : + String toString()
Car : + public Car(String make, String model, int year, String bodyStyle, String driver)

Driver : + String toString()
Driver : + public Driver(String name, int age)
Driver : + public String getName()
Driver : + public String setName(String name)
Driver : + public int getAge()
Driver : + public int setAge(int age)

Main *-- Driver: has-a
Main *-- Car
Car *-- Driver











@enduml
